with english version and photo gallery

--- a/pages/_head-en.html
+++ b/pages/_head-en.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            <a class="navbar-brand" rel="home" title="Denta Bran" href="index.html">
+            <a class="navbar-brand" rel="home" title="Denta Bran" href="index-en.html">
                 <img src="../dist/img/logo/LogoDentaBran_200x28.png" style="max-width: 200px; margin-top: -5px;">
             </a>
         </div>
@@ -27,25 +27,13 @@
         <!-- /.navbar-top-links -->
 
         <div class="navbar-default sidebar" role="navigation">
-            <!--<img class="responsive" src="../dist/img/sediu/sediu_1_xs.jpg" alt="Sediu LUTSCH" style="width:100%" />-->
             <div class="sidebar-nav navbar-collapse">
                 <ul class="nav" id="side-menu">
-                    <!--<li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Poate dispare de aici...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>                            
-                        </li>-->
-
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="servicii.html">Services</a></li>
-                    <li><a href="galerie-foto.html">Photo Gallery</a></li>
-                    <li><a href="proiecte.html">Funded Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index-en.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Photo Gallery</a></li>
+                    <li><a href="funded-projects.html">Funded Projects</a></li>
+                    <li><a href="contact-en.html">Contact</a></li>
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
