--- a/pages/contact-en.html
+++ b/pages/contact-en.html
@@ -26,8 +26,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script>
         $(function(){
-        $("#head").load("_head.html"); 
-        $("#foot").load("_foot.html"); 
+        $("#head").load("_head-en.html"); 
+        $("#foot").load("_foot-en.html"); 
         });  
     </script>
 </head>
@@ -43,22 +43,22 @@
     </div> <!-- /.row -->
     <div class="row">
         <div class="col-md-6">
-            <p><strong>Adresa:</strong><br/>Bd. Ferdinand, nr. 39 B, Alba Iulia<br/>
+            <p><strong>Address:</strong><br/>Bd. Ferdinand, nr. 39 B, Alba Iulia<br/>
 				Alba Iulia<br/>
-				jud. ALBA<br/>ROMANIA</p>
-				<p><strong>Orar:</strong><br/>
-				Luni, Miercuri, Vineri: 14 - 21<br/>
-                Marti, Joi: 8 - 13</p>
-				<p><strong>Telefon programari:</strong> +4 0258 812 918</p>				
+				ROMANIA</p>
+				<p><strong>Schedule:</strong><br/>
+				Monday, Wednesday, Friday: 14:00 - 21:00<br/>
+                Tuesday, Thursday: 8:00 - 13:00</p>
+				<p><strong>Telephone for appointments:</strong> +4 0258 812 918</p>				
 
         </div>
         <div class="col-md-6">
             <img class="img-responsive" src="http://maps.google.com/maps/api/staticmap?center=46.061,23.575&zoom=15&size=520x400&maptype=roadmap&markers=color:blue|label:B|46.0624,23.5791&markers=color:green|label:G|46.0568,23.5758&markers=color:red|label:C|46.0655,23.572&sensor=false" alt="Denta Bran - Alba Iulia" class="r" height="342">
             <div class="portfolio-caption">
-                        <h3>Legenda</h3>
-                        <p class="text-muted">B - Clinica Denta BRAN<br>
-                            C - Cetatea "Alba Carolina"<br>
-                            G - Gara & autogara</p>
+                        <h3>Legend</h3>
+                        <p class="text-muted">B - Denta BRAN clinic<br>
+                            C - "Alba Carolina" fortress<br>
+                            G - Train & bus station</p>
             </div>
             <!--<div class="map">
                 <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBLA7JdtgUqlMoh6aylj2h8fEm4dhpCSsg&q=strada+Horea+87B,+Sebes">
