--- a/pages/funded-projects.html
+++ b/pages/funded-projects.html
@@ -26,8 +26,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script>
         $(function(){
-        $("#head").load("_head.html"); 
-        $("#foot").load("_foot.html"); 
+        $("#head").load("_head-en.html"); 
+        $("#foot").load("_foot-en.html"); 
         });  
     </script>
 </head>
@@ -38,36 +38,13 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Contact Denta Bran</h1>
+            <h1 class="page-header">Funded projects</h1>
         </div> <!-- /.col-lg-12 -->
     </div> <!-- /.row -->
-    <div class="row">
-        <div class="col-md-6">
-            <p><strong>Adresa:</strong><br/>Bd. Ferdinand, nr. 39 B, Alba Iulia<br/>
-				Alba Iulia<br/>
-				jud. ALBA<br/>ROMANIA</p>
-				<p><strong>Orar:</strong><br/>
-				Luni, Miercuri, Vineri: 14 - 21<br/>
-                Marti, Joi: 8 - 13</p>
-				<p><strong>Telefon programari:</strong> +4 0258 812 918</p>				
-
-        </div>
-        <div class="col-md-6">
-            <img class="img-responsive" src="http://maps.google.com/maps/api/staticmap?center=46.061,23.575&zoom=15&size=520x400&maptype=roadmap&markers=color:blue|label:B|46.0624,23.5791&markers=color:green|label:G|46.0568,23.5758&markers=color:red|label:C|46.0655,23.572&sensor=false" alt="Denta Bran - Alba Iulia" class="r" height="342">
-            <div class="portfolio-caption">
-                        <h3>Legenda</h3>
-                        <p class="text-muted">B - Clinica Denta BRAN<br>
-                            C - Cetatea "Alba Carolina"<br>
-                            G - Gara & autogara</p>
-            </div>
-            <!--<div class="map">
-                <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBLA7JdtgUqlMoh6aylj2h8fEm4dhpCSsg&q=strada+Horea+87B,+Sebes">
-                </iframe>
-	        </div>-->
-        </div>
-    </div> <!-- /.row -->
-
-
+    <div class="intrinsic-container intrinsic-container-4x3">
+        <iframe src="../dist/proiecte/index.html" allowfullscreen></iframe> 
+    </div>  <!-- / end row -->
+ 
 </div> <!-- / end page wrapper -->
         
 <div id="foot"></div>
