--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -26,8 +26,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script>
         $(function(){
-        $("#head").load("_head.html"); 
-        $("#foot").load("_foot.html"); 
+        $("#head").load("_head-en.html"); 
+        $("#foot").load("_foot-en.html"); 
         });  
     </script>
 </head>
@@ -38,7 +38,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Galerie foto</h1>
+            <h1 class="page-header">Photo Gallery</h1>
         </div> <!-- /.col-lg-12 -->
     </div> <!-- /.row -->
 
@@ -46,7 +46,7 @@
     <section id="portfolio" >
         <div class="container-fluid">
             <div class="row">
-                <h3>Echipa medicala, clienti multumiti</h3>
+                <h3>Medical team, happy clients</h3>
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <img src="../dist/img/bran/bran_1 001_s.jpg" class="img-responsive" alt="Echipa medicala">
@@ -85,7 +85,7 @@
                 </div>
             </div> <!-- end row -->
             <div class="row">
-                <h3>Aparatura medicala moderna</h3>
+                <h3>Modern medical equipment</h3>
                 <div class="col-md-3 col-sm-6 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <img src="../dist/img/bran/DSC03624_s.jpg" class="img-responsive" alt="aparatura medicala">
@@ -146,8 +146,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/bran_1 001_s.jpg" alt="Echipa">
-                                <p>echipa medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Medical team </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -169,8 +169,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/bran_22.jpg" alt="Echipa">
-                                <p>echipa medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Medical team </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -192,8 +192,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/bran2_s.jpg" alt="Echipa medicala">
-                                <p>echipa medicala</p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Medical team</p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -214,8 +214,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/bran_s.jpg" alt="echipa medicala">
-                                <p>echipa medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Medical team </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -236,8 +236,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/DSC03624_s.jpg" alt="aparatura medicala">
-                                <p>aparatura medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Modern medical equipment </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -258,8 +258,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/DSC03630_S.jpg" alt="aparatura medicala">
-                                <p>aparatura medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Modern medical equipment </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -280,8 +280,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/DSC02119_1.jpg" alt="aparatura medicala">
-                                <p>aparatura medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Modern medical equipment </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -302,8 +302,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/DSC02122_S.jpg" alt="aparatura medicala">
-                                <p>aparatura medicala </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>Modern medical equipment </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
@@ -312,6 +312,6 @@
         </div>
     </div>
   <!-- end modals -->
-  
+
 </body>
 </html>
