--- a/pages/index-en.html
+++ b/pages/index-en.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</title>
+    <link rel="shortcut icon" type="image/png" href="../dist/img/logo/favicon.ico"/>
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
@@ -62,7 +63,7 @@
                     <div class="panel-body">
                         <p>Tradition and experience: highly qualified medical staff.<br> Owned dental laboratory.<br> Operation Room.<br> Anesthesia Room<br> We use only CE certified materials.</p>
                     </div>
-                    <a href="servicii.html">
+                    <a href="services.html">
                         <div class="panel-footer">
                             <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -87,10 +88,14 @@
                         </div>
                     </div>
                     <div class="panel-body">
-                        <p>S.C. DENTA-BRAN S.R.L. din Alba-Iulia a derulat în perioada august 2012 – mai 2013 proiectul "Dotarea cu aparate performante a S.C. DENTA-BRAN S.R.L. în vederea dezvoltării activității și creșterii competitivității"</p>
-                        <p>S.C. DENTA-BRAN S.R.L. din Alba-Iulia a derulat în perioada august 2012 – mai 2013 proiectul "Retehnologizarea S.C. DENTA-BRAN S.R.L. în vederea dezvoltării activității de tehnică dentară și creșterii competitivității"</p>
+                        <p>SC DENTA-BRAN S.R.L. Alba-Iulia carried out in the period August 2012 - May 2013 the project
+                             "Provision of performance equipment of S.C. DENTA-BRAN S.R.L. in order to develop the activity 
+                             and increase of the competitiveness".</p>
+                        <p>SC DENTA-BRAN S.R.L. Alba-Iulia carried out in the period August 2012 - May 2013 the project 
+                            "Re-technologization of SC DENTA-BRAN S.R.L. in order to develop the activity of dental technology
+                             and increase of the competitiveness".</p>
                     </div>
-                    <a href="proiecte.html">
+                    <a href="funded-projects.html">
                         <div class="panel-footer">
                             <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i>
@@ -135,7 +140,7 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="servicii.html">
+                    <a href="services.html">
                         <div class="panel-footer">
                             <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -178,7 +183,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="servicii.html">
+                    <a href="services.html">
                         <div class="panel-footer">
                             <span class="pull-left">more...</span>
                             <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -209,8 +214,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <img class="img-responsive img-centered" src="../dist/img/bran/diploma_l.jpg" alt="Diploma Denta Bran">
-                                <p>o descriere... </p>
-                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Inchide fereastra</button>
+                                <p>diploma </p>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close window</button>
                             </div>
                         </div>
                     </div>
