--- a/pages/proiecte.html
+++ b/pages/proiecte.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Denta Bran - implantologie, protetica, stomatologie, chirurgie oro-maxilo-faciala</title>
+    <link rel="shortcut icon" type="image/png" href="../dist/img/logo/favicon.ico"/>
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- MetisMenu CSS -->
