--- a/pages/services.html
+++ b/pages/services.html
@@ -26,8 +26,8 @@
     <script src="../vendor/jquery/jquery.min.js"></script>
     <script>
         $(function(){
-        $("#head").load("_head.html"); 
-        $("#foot").load("_foot.html"); 
+        $("#head").load("_head-en.html"); 
+        $("#foot").load("_foot-en.html"); 
         });  
     </script>
 </head>
@@ -38,8 +38,8 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Servicii</h1>
-            <p>Personalul cu o inalta calificare va asigura serviciile:</p>
+            <h1 class="page-header">Services</h1>
+            <p>Highly qualified staff will provide the services:</p>
         </div> <!-- /.col-lg-12 -->
     </div> <!-- /.row -->
     <!-- Image Header -->
@@ -52,17 +52,17 @@
         <div class="col-lg-12">
             <!--<h4 >Un text sau mesaj</h4>-->
             <ul id="myTab" class="nav nav-tabs nav-justified">
-                <li class="active"><a href="#service-1" data-toggle="tab">Implantologie</a>
+                <li class="active"><a href="#service-1" data-toggle="tab">Implantology</a>
                     </li>
-                    <li class=""><a href="#service-2" data-toggle="tab">Chirurgie BMF</a>
+                    <li class=""><a href="#service-2" data-toggle="tab">Oral-Maxillofacial Surgery</a>
                     </li>
-                    <li class=""><a href="#service-3" data-toggle="tab">Protetica dentara</a>
+                    <li class=""><a href="#service-3" data-toggle="tab">Prosthodontics</a>
                     </li>
-                    <li class=""><a href="#service-4" data-toggle="tab">Stomatologie estetica</a>
+                    <li class=""><a href="#service-4" data-toggle="tab">Aesthetic dentistry</a>
                     </li>
-                    <li class=""><a href="#service-5" data-toggle="tab">Ortodontie</a>
+                    <li class=""><a href="#service-5" data-toggle="tab">Orthodontics</a>
                     </li>
-                    <li class=""><a href="#service-6" data-toggle="tab">Alte servicii</a>
+                    <li class=""><a href="#service-6" data-toggle="tab">Other dental services</a>
                     </li>
                 </ul>
 
@@ -71,17 +71,17 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="thumbnail">
-                                    <img class="img-responsive" src="../dist/img/bran/bran_22.jpg" alt="Servicii" style="width:100%" >
+                                    <img class="img-responsive" src="../dist/img/bran/bran_22.jpg" alt="Services" style="width:100%" >
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <h4>Implantologie</h4>
-                                <p>Serviciile noastre in implantologie</p>
+                                <h4>Implantology</h4>
+                                <p>Our services in implantology</p>
                                 <ul>
-                                    <li>Implanturi dentare</li>
+                                    <li>Dental implants</li>
                                     <li>Sinus lift</li>
-                                    <li>Augmentare osoasa</li>
-                                    <li>Aditie osoasa</li>
+                                    <li>Bone Augmentation</li>
+                                    <li>Bone addition</li>
                                 </ul>
                             </div>
                         </div>
@@ -90,44 +90,44 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="thumbnail">
-                                    <img class="img-responsive" src="../dist/img/bran/bran2_s.jpg" alt="Servicii" style="width:100%" >
+                                    <img class="img-responsive" src="../dist/img/bran/bran2_s.jpg" alt="Services" style="width:100%" >
                                 </div>
                                 <div class="thumbnail">
-                                    <img class="img-responsive" src="../dist/img/bran/bran_s.jpg" alt="Servicii" style="width:100%" >
+                                    <img class="img-responsive" src="../dist/img/bran/bran_s.jpg" alt="Services" style="width:100%" >
                                 </div>
                             </div>
                             <div class="col-md-8">
-                                <h4>Chirurgie orala</h4>
-                                <p>Serviciile noastre in Chirurgia BMF (oromaxilofaciala):</p>
+                                <h4>Oral Surgery</h4>
+                                <p>Our services:</p>
                                 <ul>
-                                    <li>Extractii simple:
+                                    <li>Simple extraction:
                                         <ul>
-                                            <li>extractie dinti monoradiculari</li>
-                                            <li>extractie dinti pluriradiculari</li>
-                                            <li>extractie dinti temporari (de lapte)</li>
-                                            <li>eruptia molarilor de minte (molarul 3)</li>
+                                            <li>monoradicular teeth extraction</li>
+                                            <li>pluriradicular teeth extraction</li>
+                                            <li>temporary (milk teeth) extraction</li>
+                                            <li>the rash of mind molar (molar 3) </li>
                                         </ul>
                                     </li>
-                                    <li>Terapia dintilor parodontotici mobili</li>
-                                    <li>Alveoloplastie</li>
-                                    <li>Osteoplastia procesului alveolar</li>
-                                    <li>Premolarizare</li>
-                                    <li>Odontectomie</li>
-                                    <li>Rezectie apicala dinti anteriori sau premolari</li>
-                                    <li>Chistectomie</li>
-                                    <li>Rezectie apicala molari</li>
-                                    <li>Extirpare tumorete si epulide</li>
-                                    <li>Incizie si drenaj abces dentar:
+                                    <li>Therapeutic periodontitis teeth </li>
+                                    <li>Alveoloplasty</li>
+                                    <li>Osteoplasty of the alveolar process </li>
+                                    <li>Premolarization</li>
+                                    <li>Odontectomy</li>
+                                    <li>Apical anterior tooth or premolar resection</li>
+                                    <li>Cystectomy</li>
+                                    <li>Molar apical resection</li>
+                                    <li>Tumor and epileptic extirpation</li>
+                                    <li>Incision and drainage dental abscess:
                                         <ul>
                                             <li>vestibular</li>
                                             <li>submandibular endobucal</li>
-                                            <li>adenita superficiala</li>
+                                            <li>superficial adenitis </li>
                                         </ul>
                                     </li>
-                                    <li>Gingivectomie cu gingivoplastie</li>
-                                    <li>Tratament anti-inflamator</li>
-                                    <li>Pericoronarita - tratament medicamentos</li>
-                                    <li>Pericoronarita - terapia chirurgicala</li>
+                                    <li>Gingivectomy with gingivoplasty </li>
+                                    <li>Anti-inflammatory treatment</li>
+                                    <li>Pericoronaritis - medical treatment </li>
+                                    <li>Pericoronaritis - Surgical Therapy</li>
                                 </ul>
                             </div>
                         </div>
@@ -135,11 +135,11 @@
                     <div class="tab-pane fade" id="service-3">
                         <div class="row">
                             <div class="col-md-4">
-                                <h4>Protetica dentara</h4>
-                                <p>Serviciile noastre in protetica dentara:</p>
+                                <h4>Dental prosthesis </h4>
+                                <p>Our Dental Services:</p>
                                 <ul>
-                                    <li>restaurarea arcadelor dento-alveolare</li>
-                                    <li>coroană acrilică provizorie</li>
+                                    <li>Restore dento-alveolar arches </li>
+                                    <li>Provisional acrylic crown</li>
                                     <li>Crown-root device removal</li>
                                     <li>Full metallic crown</li>
                                     <li>Metallo-composite crown - Semiesthetic</li>
@@ -153,14 +153,14 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="thumbnail">
-                                    <img class="img-responsive" src="../dist/img/bran/bran_22.jpg" alt="Servicii" style="width:100%" >
+                                    <img class="img-responsive" src="../dist/img/bran/bran_22.jpg" alt="Services" style="width:100%" >
                                 </div>
                             </div>
                         </div>    
                     </div>
                     <div class="tab-pane fade" id="service-4">
-                        <h4>Stomatologie estetica</h4>
-                        <p>Serviciile noastre in stomatologie estetica:</p>
+                        <h4>Aesthetic dentistry</h4>
+                        <p>our services:</p>
                         <ul>
                             <li>Ceramic crown High Esthetics</li>
                             <li>Veneer High Esthetics</li>
@@ -168,15 +168,15 @@
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="service-5">
-                        <h4>Ortodontie</h4>
-                        <p>Serviciile noastre de ortodontie includ:</p>
+                        <h4>Orthodontics</h4>
+                        <p>Our services:</p>
                         <ul>
-                            <li>Planificarea tratamentului ortodontic</li>
-                            <li>Aparat ortodontic fix / arcadă</li>
+                            <li>Planning orthodontic treatment</li>
+                            <li>Fixed orthodontic /orthodontic device</li>
                             <li>Self-link fixed orthodontic device /arcade</li>
                             <li>Incognito orthodontic device/arcade</li>
-                            <li>Aparat ortodontic mobil / arcada</li>
-                            <li>Monobloc</li>
+                            <li>Mobile orthodontic device / arcade</li>
+                            <li>Monoblock</li>
                             <li>Disruptors</li>
                             <li>Bracket restoration</li>
                             <li>Ring cementing</li>
@@ -197,14 +197,14 @@
                         </ul>
                     </div>
                     <div class="tab-pane fade" id="service-6">
-                        <h4>Alte servicii</h4>
-                        <p>de asemenea...</p>
+                        <h4>Other dental services</h4>
+                        <p>also...</p>
                         <ul>
-                            <li>Radiologie</li>
+                            <li>Radiology</li>
                             <li>Rx Bite-Wing</li>
-                            <li>Odontologie</li>
-                            <li>Pedodontie</li>
-                            <li>Profilaxie Dentara</li>
+                            <li>Odontology</li>
+                            <li>Pediatric dentistry</li>
+                            <li>Dental Prophylaxis</li>
                         </ul>
                     </div>
                 </div>
@@ -214,7 +214,7 @@
     </div> <!-- /.row -->
     <div class="row">
         <div class="col-lg-6">
-            <h3>Tarife</h3>
+            <h3>Prices</h3>
             <ul class="list-group">
                 <li class="list-group-item">CONSULTATIE <span class="badge">GRATUIT</span></li>
                 <li class="list-group-item">EXTRACTIE <span class="badge">60 LEI</span></li>
