--- a/pages/_foot-en.html
+++ b/pages/_foot-en.html
@@ -2,8 +2,8 @@
 <footer>
     <div class="container" style="margin-top: 30px;">
         <ul class="navbar-right list-inline">
-            <li><a href="servicii.html"><i class="fa fa-medkit"></i> Services</a></li>
-            <li><a href="contact.html"><i class="fa fa-envelope"></i> Contact</a></li>
+            <li><a href="services.html"><i class="fa fa-medkit"></i> Services</a></li>
+            <li><a href="contact-en.html"><i class="fa fa-envelope"></i> Contact</a></li>
             <li><a href="https://www.facebook.com/pages/Cabinet-denta-bran-alba-iulia/228061867326488" target="_blank"><i class="fa fa-facebook-official"></i> Facebook </a></li>
         </ul>
     </div>
